my third commit

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                       <a class="nav-link" href="service.html">Services</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="service.html">Shop</a>
+                      <a class="nav-link" href="">Shop</a>
                     </li>
                    
                     <li class="nav-item">
@@ -62,7 +62,7 @@
                       <a class="nav-link" href="#">Impressum</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Kontact</a>
+                      <a class="nav-link" href="contact.html">Kontact</a>
                     </li>
                   </ul>
                  
@@ -128,7 +128,7 @@
       </div>
     </div>
   </div>
-  <!------------------------------------------------------------->
+  <!------------------middle heading------------------------------------------->
   <div class="container-fluid">
     <div class="row middle_heading">
       <div class="col-12 ">
@@ -235,7 +235,7 @@
       <!--headin5_amrc-->
       <ul class="footer_ul_amrc">
       <li><a href="about.html">Uber Uns </a></li>
-      <li><a href="">Services</a></li>
+      <li><a href="service.html">Services</a></li>
       <li><a href="">SHOP </a></li>
       <li><a href="">Datencehez</a></li>
       <li><a href="">Versadevies</a></li>
